--- a/functions/package.json
+++ b/functions/package.json
@@ -13,7 +13,8 @@
     "actions-on-google": "^2.1.3",
     "dialogflow-fulfillment": "^0.4.1",
     "firebase-admin": "~5.12.1",
-    "firebase-functions": "^1.0.3"
+    "firebase-functions": "^1.0.3",
+    "umbraco-headless": "^0.1.4"
   },
   "devDependencies": {
     "bespoken-tools": "^1.2.10",
