--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
     "dialogflow-fulfillment": "^0.4.1",
     "firebase-admin": "~5.12.1",
     "firebase-functions": "^1.0.3",
+    "request": "^2.87.0",
     "umbraco-headless": "^0.1.4"
   },
   "devDependencies": {
