--- a/umbracoFunc/UmbracoFunction/UmbracoFunction.csproj
+++ b/umbracoFunc/UmbracoFunction/UmbracoFunction.csproj
@@ -4,8 +4,9 @@
     <AzureFunctionsVersion>v2</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.13" />
-    <PackageReference Include="UmbracoCms.Headless.Client" Version="0.9.0-CI-20180405-03" />
+    <PackageReference Include="Google.Cloud.Dialogflow.V2" Version="1.0.0-beta01" />
+    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.14" />
+    <PackageReference Include="UmbracoCms.Headless.Client" Version="0.9.4-CI-20180628-02" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
